--- a/_config.yml
+++ b/_config.yml
@@ -11,13 +11,14 @@ markdown: kramdown
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap-3
-tagline: Site Tagline
+title : NOTHING UP MY SLEEVE
+tagline:
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
+  name : Harold Pulcher
+  email : pulcher@pulcher.biz
+  email_md5 : 283766233484b7cfcaa4e422272a21d4.png
+  github : pulcher
+  twitter : haroldpulcher
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
@@ -28,7 +29,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : http://pulcher.biz
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
