adding facebook to the sidebar

--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,8 @@ author :
   email_md5 : 283766233484b7cfcaa4e422272a21d4.png
   github : pulcher
   twitter : haroldpulcher
+  youtube : haroldpulcher
+  facebook : pulcher
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
