adding in my twitch and linkeed in

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,9 @@ author :
   github : pulcher
   twitter : haroldpulcher
   youtube : haroldpulcher
+  linkedin: harold-pulcher-microsoft-mvp
   facebook : pulcher
+  twitch : haroldpulcher
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
