--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author :
   facebook : pulcher
   twitch : haroldpulcher
   feedburner : feedname
-  bio: "A Microsoft MVP, co-ambassador for Hackster.io, developer, maker, magician, woodworker, and part time grease monkey. He has over 30 years of experience working in Information Technology. During that time he has done everything from running network cable, setting up various companies infrastructure from the absolute bare metal, and building line of business software for many of those companies. As passionate as he is about technology, you might happen to see him checking his air reserve while at a depth of 60 feet, cooking up a mean ""free-range"" fruit cake, doing pre-show table magic at the improv, or making a nice piece of wood into a lot of sawdust so my wife will have potting bench for her plants.  Use the link below to find on Twitter, Twitch, Facebook, and Youtube"
+  bio: A Microsoft MVP, co-ambassador for Hackster.io, developer, maker, magician, woodworker, and part time grease monkey. He has over 30 years of experience working in Information Technology. During that time he has done everything from running network cable, setting up various companies infrastructure from the absolute bare metal, and building line of business software for many of those companies. As passionate as he is about technology, you might happen to see him checking his air reserve while at a depth of 60 feet, cooking up a mean ""free-range"" fruit cake, doing pre-show table magic at the improv, or making a nice piece of wood into a lot of sawdust so my wife will have potting bench for her plants.  Use the link below to find on Twitter, Twitch, Facebook, and Youtube
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt
