updated font awesome and some side bar links

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author :
   email_md5 : 283766233484b7cfcaa4e422272a21d4.png
   github : pulcher
   twitter : haroldpulcher
-  youtube : haroldpulcher
+  youtube : HaroldPulcher
   linkedin: harold-pulcher-microsoft-mvp
   facebook : pulcher
   twitch : haroldpulcher
