changed blog name and updated the tagline

--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ markdown: kramdown
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title : NOTHING UP MY SLEEVE
-tagline:
+title : Harold Garage
+tagline: Learning everyday
 author :
   name : Harold Pulcher
   email : pulcher@pulcher.biz
